syntax = "proto3";

import "google/protobuf/any.proto";

message LoginRequest {
  string jwt_token = 1;
  string client_version = 2;
}